# vlr_data

./: .pdm.toml  learn_dash.py  main.py  pyproject.toml  vlr_data.ipynb
classes/: Tournament.py  __init__.py  event.py  match.py
src/components/: bar_chart.py  ids.py  layout.py  nation_dropdown.py  year_dropdown.py
src/data/: loader.py
