[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "KhemIngkapat", email = "60930364+KhemIngkapat@users.noreply.github.com"},
]
dependencies = [
    "httpx>=0.23.3",
    "selectolax>=0.3.12",
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "lxml>=4.9.2",
    "html5lib>=1.1",
    "bs4>=0.0.1",
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.1",
    "dash>=2.9.2",
]
requires-python = ">=3.11"
license = {text = "None"}

[tool.pdm.scripts]
start = 'python main.py'
lab = 'jupyter lab --app-dir=./__pypackages__/3.11/share/jupyter/lab'
dash = 'python learn_dash.py'

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]
